--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "npm run build && npm run generate-test-files && ./buildtools/run_tests.sh",
     "serve": "npm run build && npm run generate-test-files && gulp serve",
     "generate-test-files": "./buildtools/generate_test_files.sh",
-    "prepublish": "npm run test && cp -r dist demo/public"
+    "prepublish": "npm run test && cp -r dist demo/public",
+    "prepare": "npm run build"
   },
   "test": "npm run test",
   "author": "Google",
