Support ja language

--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "files": [
     "dist/firebaseui.js",
+    "dist/firebaseui__en.js",
+    "dist/firebaseui__ja.js",
     "dist/firebaseui.css",
     "dist/npm.js",
+    "dist/npm__en.js",
+    "dist/npm__ja.js",
     "dist/esm.js",
+    "dist/esm__en.js",
+    "dist/esm__ja.js",
     "dist/index.d.ts",
     "dist/externs",
     "LICENSE",
